# kos-c

./: .buildinfo  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  building.html  compiler.html  contents.html  genindex.html  gettingstarted.html  index.html  installation.html  kos-c.cabal  language.html  objects.inv  prelude.html  release.ps1  release.sh  search.html  searchindex.js
Examples/: AutoPilot.kc  Builtin.kc  GettingStarted.kc  Main.kc  sketch.kc
_sources/: building.rst.txt  contents.rst.txt  gettingstarted.rst.txt  installation.rst.txt  prelude.rst.txt
app/: Main.hs
docs/: Makefile  make.bat
docs/source/: compiler.rst  conf.py  index.rst  installation.rst  language.rst
kosc-prelude/: Builtin.kc  Util.kc
kosc-prelude/KOS/: Builtin.kc  Cockpit.kc  Collections.kc  Communication.kc  Drawing.kc  Geography.kc  IO.kc  Maneuver.kc  Math.kc  Orbits.kc  Time.kc  Universe.kc  Vessel.kc
kosc-prelude/KOS/Vessel/: Modules.kc  Parts.kc
kosc-prelude/Plane/: AutoPilot.kc
kosc-prelude/Rocket/: Launch.kc  Maneuver.kc  Staging.kc
src/KOSC/: AST.hs  Compiler.hs  Parser.hs
src/KOSC/Compiler/: CodeGen.hs  Common.hs  Errors.hs  ImportResolution.hs  Monad.hs  ScopeChecker.hs  TypeChecker.hs
src/KOSC/Language/: AST.hs  Parser.hs
test/: Spec.hs
