name:                kos-c
version:             0.2.0.1
-- synopsis:
-- description:
homepage:            https://github.com/fatho/kos-c#readme
license:             BSD3
license-file:        LICENSE
author:              Fabian Thorand
maintainer:          f.thorand@gmail.com
copyright:           2017 Fabian Thorand
category:            Web
build-type:          Simple
extra-source-files:  README.md
data-files:          kosc-prelude/KOS/*.kc
                     kosc-prelude/Rocket/*.kc
                     kosc-prelude/Plane/*.kc
                     kosc-prelude/*.kc
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     KOSC.Language.AST
                       KOSC.Language.Parser
                       KOSC.Compiler
                       KOSC.Compiler.Common
                       KOSC.Compiler.Monad
                       KOSC.Compiler.Errors
                       KOSC.Compiler.ImportResolution
                       KOSC.Compiler.ScopeChecker
                       KOSC.Compiler.TypeChecker
                       KOSC.Compiler.CodeGen
  build-depends:       base >= 4.7 && < 5
                     , ansi-wl-pprint
                     , trifecta
                     , lens
                     , containers
                     , mtl
                     , unordered-containers
                     , transformers
                     , parsers
                     , text
                     , interpolatedstring-perl6
                     , directory
                     , filepath
  default-language:    Haskell2010
  ghc-options:         -W

executable koscc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , filepath
                     , directory
                     , ansi-wl-pprint
                     , trifecta
                     , text
                     , kos-c
  default-language:    Haskell2010

test-suite kos-c-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kos-c
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fatho/kos-c
